--- a/app/src/main/res/drawable/bg_splash_screen.xml
+++ b/app/src/main/res/drawable/bg_splash_screen.xml
@@ -2,10 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/colorPrimary" />
-<!--    <item>-->
-<!--        <bitmap-->
-<!--            android:gravity="center"-->
-<!--            android:src="@drawable/big_logo" />-->
-<!--    </item>-->
+    <item>
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/big_logo" />
+    </item>
 
 </layer-list>
