--- a/app/src/main/res/navigation/reg_nav.xml
+++ b/app/src/main/res/navigation/reg_nav.xml
@@ -9,6 +9,24 @@
         android:id="@+id/onBoardingFragment"
         tools:layout="@layout/fragment_on_boarding"
         android:name="com.yazan98.culttrip.client.fragment.reg.OnBoardingFragment"
-        android:label="OnBoardingFragment" />
+        android:label="OnBoardingFragment" >
+        <action
+            android:id="@+id/action_onBoardingFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/loginFragment"
+        tools:layout="@layout/fragment_login"
+        android:name="com.yazan98.culttrip.client.fragment.reg.LoginFragment"
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.yazan98.culttrip.client.fragment.reg.RegisterFragment"
+        android:label="RegisterFragment" />
 
 </navigation>
