--- a/app/src/main/res/layout/screen_main.xml
+++ b/app/src/main/res/layout/screen_main.xml
@@ -79,7 +79,7 @@
     </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/MainFloatingButton"
         android:layout_width="wrap_content"
         android:src="@drawable/discover"
         app:backgroundTint="@color/colorPrimary"
