--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF2D55</color>
-    <color name="colorPrimaryDark">#FF2D55</color>
-    <color name="colorAccent">#FF2D55</color>
+    <color name="colorPrimary">#f45b55</color>
+    <color name="colorPrimaryDark">#f45b55</color>
+    <color name="colorAccent">#f45b55</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
 </resources>
