--- a/app/src/main/res/layout/screen_discovery.xml
+++ b/app/src/main/res/layout/screen_discovery.xml
@@ -6,7 +6,6 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:background="@color/white"
         android:id="@+id/appBarLayout"
         android:layout_height="wrap_content">
 
@@ -16,7 +15,7 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/white"
                 android:text="@string/app_name"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"/>
