--- a/app/src/main/res/navigation/discovery_nav.xml
+++ b/app/src/main/res/navigation/discovery_nav.xml
@@ -9,5 +9,14 @@
         android:id="@+id/discoverFragment"
         tools:layout="@layout/fragment_discover"
         android:name="com.yazan98.culttrip.client.fragment.operations.CategoryFragment"
-        android:label="DiscoverFragment" />
+        android:label="DiscoverFragment" >
+        <action
+            android:id="@+id/action_discoverFragment_to_recipeFragment"
+            app:destination="@id/recipeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/recipeFragment"
+        tools:layout="@layout/fragment_recipe"
+        android:name="com.yazan98.culttrip.client.fragment.operations.RecipeFragment"
+        android:label="RecipeFragment" />
 </navigation>
