--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -8,6 +8,7 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:id="@+id/DiscoveryContent"
         android:layout_height="match_parent">
 
