--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#000</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
+    <color name="comments_bg">#DCD9D9</color>
 </resources>
